provisioning/k8s/02-app-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: guitarist-be
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: guitarist-be
      app: guitarist-be
      role: backend
      version: latest
  template:
    metadata:
      labels:
        name: guitarist-be
        app: guitarist-be
        role: backend
        version: latest
    spec:
      containers:
        - name: guitarist-be
          image: mashimine/guitarist
          imagePullPolicy: Always
          ports:
            - name: guitarist-be
              containerPort: 1337
              protocol: TCP
      imagePullSecrets:
        - name: mashimine-dockerhub-pullsecret
