provisioning/k8s/01-app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: guitarist-be
  namespace: default
  labels:
    name: guitarist-be
    app: guitarist-be
    role: backend
    version: latest
spec:
  type: NodePort
  selector:
    app: guitarist-be
    role: backend
    version: latest
  ports:
    - name: guitarist-be
      port: 80
      targetPort: 1337
      protocol: TCP
